[metadata]
name = cloudscpytools
description =  Python driver that executes the Fortran CLOUDSC dwarf
author = ECMWF
author_email = zbigniew.piotrowski@ecmwf.int
license = Apache-2.0
license_file = ../../LICENSE
;long_description = file: ../../README.md
;long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/ecmwf-ifs/dwarf-p-cloudsc
platforms = Linux, Mac
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience:: Science / Research
    License :: OSI Approved:: Apache License, Version 2.0
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
;   numpy commented out as f90wrap should request a compatible version
    f90wrap
    click
    h5py
    sorcery

[options.packages.find]
where = src
exclude = drivers
