[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudscpython"
version = "0.1.0"
authors = [
    {name = "Michael Lange", email = "michael.lange@ecmwf.int"}
]
description = "Collection of Python variants of the CLOUDSC dwarf"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
   " Development Status :: 3 - Alpha ",
   " Intended Audience:: Science / Research ",
   " License :: OSI Approved:: Apache License, Version 2.0 ",
   " Natural Language :: English ",
   " Operating System :: POSIX ",
   " Programming Language :: Python :: 3.8 ",
   " Programming Language :: Python :: 3.9 ",
   " Programming Language :: Python :: 3.10 ",
   " Programming Language :: Python :: 3.11 ",
   " Topic :: Scientific/Engineering :: Atmospheric Science "
]
dependencies = [
    "click",
    "h5py",
    "numpy",
]

[project.scripts]
"cloudsc_f2py.py" = "drivers.cloudsc_f2py:main"

[project.urls]
repository = "https://github.com/ecmwf-ifs/dwarf-p-cloudsc"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["cloudscf2py", "drivers*"]
