[metadata]
name = cloudsc4py
description = GT4Py-based implementation of the CLOUDSC dwarf
author = ETH Zurich
author_email = subbiali@phys.ethz.ch
license = Apache-2.0
license_file = ../../LICENSE
;long_description = file: ../../README.md
;long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/ecmwf-ifs/dwarf-p-cloudsc
platforms = Linux, Mac
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience:: Science / Research
    License :: OSI Approved:: Apache License, Version 2.0
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
    click
    gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@master#egg=gt4py
    h5py
    numpy
    pandas
    sympl @ git+https://github.com/stubbiali/sympl.git@oop#egg=sympl
    xarray

;[tool:pytest]
;testpaths = tests

;[build_sphinx]
;source-dir = docs/source
;build-dir = docs/build
;builder = html latexpdf

[flake8]
exclude =
    .eggs
    .git
max-line-length = 79
