[metadata]
name = cloudsc-fortran-Python-interface
description =  Python driver that executes the Fortran CLOUDSC dwarf
author = ECMWF
author_email = zbigniew.piotrowski@ecmwf.int
license = Apache-2.0
license_file = ../../LICENSE
;long_description = file: ../../README.md
;long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/ecmwf-ifs/dwarf-p-cloudsc
platforms = Linux, Mac
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience:: Science / Research
    License :: OSI Approved:: Apache License, Version 2.0
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
package_dir =
    =src
install_requires =
    click
    h5py
    numpy
    f90wrap

[options.packages.find]
where = src

